force-app/main/default/objects/Bus_Reschedule__c/Bus_Reschedule__c.object-meta.xml
<CustomObject>
    <label>Bus Reschedule</label>
    <nameField>
        <displayFormat>RESCH-{00000}</displayFormat>
        <label>Bus Reschedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bus Reschedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>