force-app/main/default/objects/Bus_Reschedule__c/fields/Bus_Booking__c.field-meta.xml
<CustomField>
    <fullName>Bus_Booking__c</fullName>
    <label>Bus Booking</label>
    <referenceTo>Bus_Booking__c</referenceTo>
    <relationshipLabel>Bus Reschedules</relationshipLabel>
    <relationshipName>Bus_Reschedules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>