force-app/main/default/objects/Bus_Reschedule__c/fields/Fare_Difference__c.field-meta.xml
<CustomField>
    <fullName>Fare_Difference__c</fullName>
    <label>Fare Difference</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>