force-app/main/default/objects/Bus_Reschedule__c/fields/New_Trip__c.field-meta.xml
<CustomField>
    <fullName>New_Trip__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>New Trip</label>
    <referenceTo>Bus_Trip__c</referenceTo>
    <relationshipLabel>Bus Reschedules (New Trip)</relationshipLabel>
    <relationshipName>Bus_Reschedules1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>