force-app/main/default/objects/Bus_Reschedule__c/fields/Old_Trip__c.field-meta.xml
<CustomField>
    <fullName>Old_Trip__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Old Trip</label>
    <referenceTo>Bus_Trip__c</referenceTo>
    <relationshipLabel>Bus Reschedules</relationshipLabel>
    <relationshipName>Bus_Reschedules</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>