force-app/main/default/objects/Bus_Reschedule__c/fields/Requested_Via__c.field-meta.xml
<CustomField>
    <fullName>Requested_Via__c</fullName>
    <label>Requested Via</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agentforce</fullName>
            </value>
            <value>
                <fullName>Support Agent</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>