force-app/main/default/objects/Bus_Reschedule__c/fields/Reschedule_Date__c.field-meta.xml
<CustomField>
    <fullName>Reschedule_Date__c</fullName>
    <defaultValue>Now()</defaultValue>
    <label>Reschedule Date</label>
    <type>DateTime</type>
</CustomField>