force-app/main/default/objects/Bus_Reschedule__c/fields/Reschedule_Reason__c.field-meta.xml
<CustomField>
    <fullName>Reschedule_Reason__c</fullName>
    <label>Reschedule Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>