force-app/main/default/objects/Bus_Reschedule__c/validationRules/New_Trip_Differ_from_Old_Trip.validationRule-meta.xml
<ValidationRule>
    <fullName>New_Trip_Differ_from_Old_Trip</fullName>
    <active>true</active>
    <errorConditionFormula>New_Trip__c = Old_Trip__c</errorConditionFormula>
    <errorDisplayField>New_Trip__c</errorDisplayField>
    <errorMessage>The new trip must be different from the previous trip.</errorMessage>
</ValidationRule>